# House

./: README.md  meson.build  org.gnome.House.json  org.gnome.LightController.json  org.gnome.LightController.json~  python3-requests.json  python3-zeroconf.json
data/: meson.build  org.gnome.House.appdata.xml.in  org.gnome.House.desktop.in  org.gnome.House.gschema.xml  org.scroker.LightController.appdata.xml.in  org.scroker.LightController.desktop.in  org.scroker.LightController.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: bridge_utilities.py  bridge_view.py  bridge_view.ui  gnome_house.gresource.xml  gnome_house.in  group_view.py  group_view.ui  light_view.py  light_view.ui  lightcontroller.gresource.xml  lightcontroller.in  main.py  meson.build  model.py  press-connect-button.ui  rest_utilities.py  style.css  utilities.py  window.py  window.ui
src/libs/: hueutilities.py  invenctory.py  model.py  utilities.py
src/widgets/: add_view.py  add_view.ui  bridge_action_row.ui  bridge_page.ui  bridge_view.py  bridge_view.ui  group_action_row.ui  group_view.py  group_view.ui  info_view.py  info_view.ui  light_action_row.ui  light_page.ui  light_view.py  light_view.ui  modify_action_row.ui  rename_action_row.ui  rename_row.py  rename_row.ui  room_page.ui  widgets.py
